# coordinode

./: .dockerignore  .gitignore  .gitmodules  .release-plz.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  deny.toml  docker-compose.yml  package.json
benches/gold/: Cargo.toml  baselines.toml
benches/gold/src/: baselines.rs  lib.rs  report.rs
benches/gold/src/report/: main.rs
benches/gold/src/ycsb/: main.rs  mod.rs
benches/vector-ann/: Cargo.toml  README.md
benches/vector-ann/docker/: Dockerfile.chromadb  Dockerfile.hnswlib  Dockerfile.qdrant  chromadb_runner.py  compose.competitors.yml  coordinode_runner.py  hnswlib_runner.py  qdrant_runner.py
benches/vector-ann/scripts/: cluster_bench.sh  cluster_graph_bench.sh  fetch_high_d.sh  hdf5_to_fvecs.py  prepare_high_d.py  server_bench.sh
benches/vector-ann/src/: fvecs.rs  graph_main.rs  grpc_main.rs  gt.rs  load_main.rs  main.rs  shard_traverse.rs
crates/coordinode-auth/: CHANGELOG.md  Cargo.toml
crates/coordinode-bench/: Cargo.toml
crates/coordinode-bench/src/: error.rs  fingerprint.rs  lib.rs  tests.rs
crates/coordinode-bench/src/fingerprint/: tests.rs
crates/coordinode-client/: Cargo.toml  build.rs
crates/coordinode-client/proto_gen/: coordinode.v1.graph.rs  coordinode.v1.query.rs  coordinode.v1.replication.rs
crates/coordinode-client/src/: config.rs  error.rs  lib.rs  source.rs  tests.rs  value.rs
crates/coordinode-client/src/source/: tests.rs
crates/coordinode-client/src/value/: tests.rs
crates/coordinode-cluster/: Cargo.toml  README.md
crates/coordinode-cluster/benches/: topology_throughput.rs
crates/coordinode-cluster/src/: error.rs  lib.rs  migration.rs  routing.rs  shard_map.rs  state_machine.rs  topology.rs  types.rs  vector_routing.rs
crates/coordinode-cluster/src/migration/: tests.rs
crates/coordinode-cluster/src/shard_map/: tests.rs
crates/coordinode-cluster/src/state_machine/: local.rs  tests.rs
crates/coordinode-cluster/src/vector_routing/: tests.rs
crates/coordinode-cluster/tests/: migration_planner.rs  proptest_invariants.rs  single_node.rs
crates/coordinode-core/: CHANGELOG.md  Cargo.toml
crates/coordinode-core/src/: lib.rs  operations.rs
crates/coordinode-core/src/graph/: blob.rs  codec.rs  doc_delta.rs  document.rs  edge.rs  intern.rs  node.rs  stats.rs  types.rs
crates/coordinode-embed/: CHANGELOG.md  Cargo.toml
crates/coordinode-embed/src/: lib.rs  repair.rs  vector_worker.rs
crates/coordinode-embed/tests/: encoder_lockdown.rs  integration.rs
crates/coordinode-modality/: Cargo.toml  README.md
crates/coordinode-modality/benches/: store_throughput.rs
crates/coordinode-modality/src/: blob.rs  document.rs  edge.rs  encrypted_index.rs  error.rs  index.rs  index_def.rs  lib.rs  node.rs  schema.rs  spatial.rs  timeseries.rs  trigger.rs  vector.rs
crates/coordinode-modality/tests/: cross_store_flow.rs  proptest_invariants.rs
crates/coordinode-query/: CHANGELOG.md  Cargo.toml
crates/coordinode-query/benches/: edge_vector_strategy.rs
crates/coordinode-query/src/: lib.rs
crates/coordinode-query/tests/: attach_document.rs  detach_document.rs  encoder_lockdown.rs  hybrid_scoring_contract.rs  query_integration.rs  snapshot_api_contract.rs
crates/coordinode-raft/: CHANGELOG.md  Cargo.toml  build.rs
crates/coordinode-raft/src/: codec.rs  lib.rs  proposal.rs  read_fence.rs  storage.rs  wait_majority.rs
crates/coordinode-raft/tests/: r075_logstore.rs  r076_write_path.rs  r076a_purge_gate.rs  r077_oplog_cdc.rs  r141_follower_reads.rs  r147_jepsen.rs  raft_cluster.rs  raft_single_node.rs  tls_cluster.rs
crates/coordinode-replicate/: Cargo.toml  build.rs
crates/coordinode-replicate/src/: lib.rs  segment_store.rs  transfer.rs  writer.rs
crates/coordinode-s3/: CHANGELOG.md  Cargo.toml
crates/coordinode-s3/src/: main.rs
crates/coordinode-search/: CHANGELOG.md  Cargo.toml
crates/coordinode-search/tests/: snapshot_filter.rs
crates/coordinode-server/: CHANGELOG.md  Cargo.toml  build.rs
crates/coordinode-server/src/: checkpoint.rs  cli.rs  main.rs  metrics_catalog.rs  registry.rs
crates/coordinode-server/tests/: cluster_vector_replication.rs  raft_snapshot_backup.rs
crates/coordinode-session/: Cargo.toml
crates/coordinode-session/src/: engine.rs  lib.rs  registry.rs  session.rs  types.rs
crates/coordinode-storage/: CHANGELOG.md  Cargo.toml
crates/coordinode-storage/benches/: coordinator_dispatch.rs  flush_compaction.rs  merge_stress.rs  mvcc_point_read.rs  write_batch_parallel.rs
crates/coordinode-storage/src/: delete_coalesce.rs  error.rs  internal_test_helpers.rs  lib.rs  placement.rs
crates/coordinode-storage/tests/: coordinator_proptest.rs
crates/coordinode-swarm/: Cargo.toml
crates/coordinode-swarm/src/: config.rs  download.rs  lib.rs  scheduler.rs  segment.rs  state.rs  transfer.rs
crates/coordinode-test-fixtures/: Cargo.toml
crates/coordinode-test-fixtures/src/: lib.rs  tests.rs
crates/coordinode-timeseries/: Cargo.toml
crates/coordinode-timeseries/src/: catalog.rs  clock.rs  config.rs  error.rs  key.rs  lib.rs  measurement_router.rs
crates/coordinode-vector/: CHANGELOG.md  Cargo.toml
crates/coordinode-vector/benches/: distance_kernel_variants.rs  hnsw_batch_insert.rs  hnsw_parallel_search.rs  hnsw_search.rs  rabitq_kernel.rs
crates/coordinode-vector/src/: build_scheduler.rs  health.rs  lib.rs  shard_strategy.rs  storage.rs
crates/coordinode-vector/tests/: hnsw_concurrent_proptest.proptest-regressions  hnsw_concurrent_proptest.rs  hnsw_rabitq_tier.rs  loom_entry_point.rs  loom_neighbours.rs
crates/coordinode-wire/: Cargo.toml
crates/coordinode-wire/src/: lib.rs  tests.rs  tls.rs
tests/integration/: Cargo.toml  build.rs
tests/integration/proto_gen/: coordinode.v1.admin.rs  coordinode.v1.common.rs  coordinode.v1.graph.rs  coordinode.v1.query.rs  coordinode.v1.replication.rs
tests/integration/src/: harness.rs  lib.rs  proto.rs
tests/integration/tests/: client.rs  cluster.rs  cypher.rs  restart.rs  server.rs  session.rs  vector.rs
(+1716 files in other folders)
