[workspace]
resolver = "2"
members = [
    "crates/coordinode-core",
    "crates/coordinode-query",
    "crates/coordinode-vector",
    "crates/coordinode-search",
    "crates/coordinode-storage",
    "crates/coordinode-modality",
    "crates/coordinode-timeseries",
    "crates/coordinode-cluster",
    "crates/coordinode-swarm",
    "crates/coordinode-raft",
    "crates/coordinode-auth",
    "crates/coordinode-server",
    "crates/coordinode-s3",
    "crates/coordinode-embed",
    "crates/coordinode-replicate",
    "crates/coordinode-client",
    "crates/coordinode-test-fixtures",
    "crates/coordinode-bench",
    "crates/coordinode-wire",
    "tests/integration",
]
exclude = [
    # Standalone bench workspaces. Build via `cd benches/<name> && cargo build`.
    "benches/gold",
    "benches/vector-ann",
]

[workspace.package]
version = "0.4.3"
edition = "2021"
rust-version = "1.90"
license = "AGPL-3.0-only"
repository = "https://github.com/structured-world/coordinode"
authors = ["structured.world <dev@structured.world>"]
publish = false

[workspace.dependencies]
# Storage — coordinode-lsm-tree as crates.io dep (ADR-018), fjall consumed (ADR-019)
# coordinode-lsm-tree remains as external crates.io dependency (ADR-018)

# Consensus
openraft = { version = "0.10.0-alpha.25", features = ["serde"] }

# Full-text search.
# default-features = false to drop `columnar-zstd-compression`, the only tantivy
# default feature that pulls the C `zstd` (zstd-sys) crate. FTS index compression
# uses lz4 instead — keeping the whole stack pure-Rust (ADR-013, no FFI) and
# letting the musl release build run without the `-D_FORTIFY_SOURCE=0` workaround.
tantivy = { version = "0.26", default-features = false, features = [
    "mmap",
    "stopwords",
    "lz4-compression",
    "stemmer",
] }
rust-stemmers = { git = "https://github.com/structured-world/rust-stemmers.git", branch = "main" }
whatlang = "0.18"

# CJK tokenization (optional, per-language feature flags)
lindera = { version = "3", default-features = false }
jieba-rs = "0.8"

# gRPC
tonic = "0.14"
prost = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp = "0.8"
rmp-serde = "1"
rmpv = { version = "1", features = ["with-serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.24"
# default-features off: we use install_recorder() + text render via our own ops
# server, not the crate's built-in http-listener / push-gateway — whose default
# features pull hyper-rustls and link aws-lc-sys (C FFI). Dropping them keeps the
# server tier off C crypto from this path.
metrics-exporter-prometheus = { version = "0.18", default-features = false }

# Parser
pest = "2"
pest_derive = "2"

# Error handling
thiserror = "2"

# Crypto
sha2 = "0.11"
aes-gcm = "0.10"
hmac = "0.13"
rand = "0.10"

# Parallelism
rayon = "1.10"
crossbeam-epoch = "0.9"

# Fast non-DoS hasher for internal-id keyed maps/sets on hot paths.
rustc-hash = "2.1"

# Pure-Rust decompressors for transparently reading compressed restore inputs
# (no C FFI: bzip2-rs is decompress-only pure Rust; flate2 uses miniz_oxide).
bzip2-rs = "0.1"
flate2 = "1"
# parking_lot: fast userspace-fast-path RwLock/Mutex, ~8-byte vs std's ~40-byte,
# no futex syscall on the uncontended path. Std-only, std-tier consumers only.
parking_lot = "0.12"

# Async utilities
futures-util = "0.3"

# Utilities
bytes = "1"

# Testing
tempfile = "3"
proptest = "1"

# Benchmarks
criterion = { version = "0.8", features = ["html_reports"] }

# Internal crates — path-only (no version). All crates are publish = false so
# cargo does not need a crates.io version. Adding `version` causes `cargo package`
# to replace path deps with registry deps and fail with "not found on crates.io".
coordinode-core = { path = "crates/coordinode-core" }
coordinode-query = { path = "crates/coordinode-query" }
coordinode-vector = { path = "crates/coordinode-vector" }
coordinode-search = { path = "crates/coordinode-search" }
coordinode-storage = { path = "crates/coordinode-storage" }
coordinode-modality = { path = "crates/coordinode-modality" }
coordinode-timeseries = { path = "crates/coordinode-timeseries" }
coordinode-cluster = { path = "crates/coordinode-cluster" }
coordinode-raft = { path = "crates/coordinode-raft" }
coordinode-auth = { path = "crates/coordinode-auth" }
coordinode-server = { path = "crates/coordinode-server" }
coordinode-s3 = { path = "crates/coordinode-s3" }
coordinode-embed = { path = "crates/coordinode-embed" }
coordinode-swarm = { path = "crates/coordinode-swarm" }
coordinode-replicate = { path = "crates/coordinode-replicate" }
coordinode-client = { path = "crates/coordinode-client" }
coordinode-test-fixtures = { path = "crates/coordinode-test-fixtures" }
coordinode-bench = { path = "crates/coordinode-bench" }
coordinode-wire = { path = "crates/coordinode-wire" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
# Off by default workspace-wide; coordinode-query opts in via a crate-level
# `#![deny(clippy::disallowed_types)]` to forbid naming the storage partition
# enum in the query layer (ADR-041). The clippy.toml that lists the type is
# global, so this keeps the lint inert in the storage / modality / embed
# crates that legitimately name partitions.
disallowed_types = "allow"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3
