[package]
name = "coordinode-bench-vector-ann"
description = "ann-benchmarks SIFT1M / GloVe / Deep-image adapter for CoordiNode HNSW — recall@k + QPS sweep against ann-benchmarks.com datasets. Outputs canonical JSON (coordinode-bench schema). Competitors (hnswlib, faiss, Annoy) run in Docker on the same host; results placed manually in `bench-results/`."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
coordinode-vector = { workspace = true }
coordinode-bench = { workspace = true }
coordinode-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
# Used to pin the global rayon pool size for thread-budget-fair runs
# (`--threads N`). HNSW build pulls rayon transitively through
# `coordinode-vector`; we depend on it directly to call
# `ThreadPoolBuilder::build_global` from main and to query
# `current_num_threads` for the report.
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "bench-vector-ann"
path = "src/main.rs"
