[workspace]
# Standalone workspace so the main production workspace (and Docker image)
# doesn't need to resolve this crate. Build via:
#
#   cd benches/vector-ann && cargo build --release --bin bench-vector-ann
#
# Artifact lands in `benches/vector-ann/target/release/bench-vector-ann`.

[package]
name = "coordinode-bench-vector-ann"
description = "ann-benchmarks SIFT1M / GloVe / Deep-image adapter for CoordiNode HNSW — recall@k + QPS sweep against ann-benchmarks.com datasets. Outputs canonical JSON (coordinode-bench schema). Competitors (hnswlib, faiss, Annoy) run in Docker on the same host; results placed manually in `bench-results/`."
version = "0.4.3"
edition = "2021"
rust-version = "1.90"
license = "AGPL-3.0-only"
publish = false

[features]
# Pass-through diagnostic: per-query distance-kernel call counts in
# the sweep log. Build with `--features dist-counters` for gap
# attribution runs; off for measured cells.
dist-counters = ["coordinode-vector/dist-counters"]

[dependencies]
coordinode-vector = { path = "../../crates/coordinode-vector" }
coordinode-bench = { path = "../../crates/coordinode-bench" }
coordinode-core = { path = "../../crates/coordinode-core" }
# gRPC driver for the server-mode bench bins (bench-vector-grpc /
# bench-vector-load): measures the product path (client -> gRPC ->
# engine) instead of the in-process HnswIndex.
coordinode-client = { path = "../../crates/coordinode-client" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# Used to pin the global rayon pool size for thread-budget-fair runs
# (`--threads N`). HNSW build pulls rayon transitively through
# `coordinode-vector`; we depend on it directly to call
# `ThreadPoolBuilder::build_global` from main and to query
# `current_num_threads` for the report.
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench-vector-ann"
path = "src/main.rs"

[[bin]]
name = "bench-vector-grpc"
path = "src/grpc_main.rs"

[[bin]]
name = "bench-vector-load"
path = "src/load_main.rs"
