[package]
name = "coordinode-auth"
description = "Authentication and security: API keys, TLS/mTLS, ACL, SSE"
version = "0.3.20"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
