[package]
name = "coordinode-cluster"
description = "Layer 6 cluster topology: ClusterTopology + ShardRouting traits with CE SingleNodeTopology + SingleShardRouting implementations (storage-stack.md Layer 6, crush.md 5-level failure domain hierarchy)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-storage = { workspace = true }
serde = { workspace = true }
smallvec = "1.13"
thiserror = { workspace = true }
tracing = { workspace = true }
# CE LocalStateMachine: background transition tasks + broadcast event streams.
tokio = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rmp-serde = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[[bench]]
name = "topology_throughput"
harness = false

[lints]
workspace = true
