[package]
name = "coordinode-core"
description = "Core graph engine: property graph model, schema, MVCC transactions"
version = "0.3.20"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true }
rmp = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
streamvbyte64 = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "document_projection"
harness = false

[lints]
workspace = true
