[package]
name = "coordinode-embed"
description = "Embedded library API: open database, execute Cypher, vector search"
version = "0.3.19"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
coordinode-query = { workspace = true }
coordinode-raft = { workspace = true }
coordinode-vector = { workspace = true }
coordinode-search = { workspace = true }
coordinode-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
lsm-tree = { package = "coordinode-lsm-tree", version = "4", default-features = false }
tempfile = { workspace = true }

[lints]
workspace = true
