[package]
name = "coordinode-embed"
description = "Embedded library API: open database, execute Cypher, vector search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Use the io_uring storage backend on Linux (forwards to
# coordinode-storage/io-uring). Default-off; no-op on non-Linux targets.
io-uring = ["coordinode-storage/io-uring"]

[dependencies]
coordinode-core = { workspace = true }
coordinode-query = { workspace = true }
coordinode-raft = { workspace = true }
coordinode-vector = { workspace = true }
coordinode-search = { workspace = true }
coordinode-storage = { workspace = true }
coordinode-modality = { workspace = true }
# Needed for `Database::open_in_memory()` which constructs a MemFs-backed
# engine. Also a useful production capability for ephemeral test
# harnesses + in-process benchmarks against EmbeddedDb directly.
lsm-tree = { package = "coordinode-lsm-tree", version = "5", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
rmpv = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
lsm-tree = { package = "coordinode-lsm-tree", version = "5", default-features = false }
tempfile = { workspace = true }
coordinode-test-fixtures = { workspace = true }
metrics = { workspace = true }
metrics-util = "0.20"

[lints]
workspace = true
