[package]
name = "coordinode-modality"
description = "Layer 4 modality stores: typed per-modality APIs over the multimodal coordinator (NodeStore, EdgeStore, VectorStore, DocumentStore, TimeSeriesStore, SpatialStore, IndexStore, BlobStore, SchemaStore)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
coordinode-storage = { workspace = true }
coordinode-vector = { workspace = true }
lsm-tree = { package = "coordinode-lsm-tree", version = "5", default-features = false }
rmp-serde = { workspace = true }
rmpv = { workspace = true, features = ["with-serde"] }
# S2 geometry for WGS-84 spatial indexing (Apache-2.0, pure Rust, no FFI).
# We add an in-tree RegionCoverer over its CellID / Cap / Rect primitives.
s2 = "0.0.13"
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
coordinode-test-fixtures = { workspace = true }

[[bench]]
name = "store_throughput"
harness = false

[lints]
workspace = true
