[package]
name = "coordinode-replicate"
description = "Replication-orchestration layer: replicated writes and consumer-retention tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
coordinode-embed = { workspace = true }
coordinode-query = { workspace = true }
coordinode-storage = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
coordinode-raft = { workspace = true }

[lints]
workspace = true
