[package]
name = "coordinode-replicate"
description = "Replication-orchestration layer: replicated writes and consumer-retention tracking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
coordinode-embed = { workspace = true }
coordinode-query = { workspace = true }
coordinode-storage = { workspace = true }
coordinode-swarm = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
metrics = { workspace = true }
# Inter-node segment-transfer gRPC (SegmentTransferService): the transport that
# carries swarm pieces between nodes for replication repair, migration, resync.
tonic = { workspace = true }
tonic-prost = "0.14"
prost = { workspace = true }
futures-util = { workspace = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
coordinode-raft = { workspace = true }
# TcpListenerStream for the in-process SegmentTransferService gRPC round-trip test.
tokio-stream = { version = "0.1", features = ["net"] }

[lints]
workspace = true
