[package]
name = "coordinode-server"
description = "CoordiNode server binary: gRPC, HTTP/REST, Bolt, WebSocket, metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "coordinode"
path = "src/main.rs"

[features]
default = ["bolt", "graphql", "vector", "full-text", "rest-proxy"]
bolt = []
graphql = []
vector = ["dep:coordinode-vector"]
full-text = ["dep:coordinode-search"]
# Embed structured-proxy for REST/JSON transcoding (disable for embedded/iOS builds
# to reduce binary size — the gRPC API on :7080 remains fully functional).
rest-proxy = ["dep:structured-proxy", "dep:axum"]
# Build the storage engine with per-block Reed-Solomon page ECC (forwards to
# coordinode-storage/page_ecc). Default-off; lets an operator who configures
# `page_ecc: force_on` (or a `degraded` endpoint) get the ECC trailer on disk.
page_ecc = ["coordinode-storage/page_ecc"]
# Use the io_uring storage backend on Linux (forwards to
# coordinode-storage/io-uring). Default-off; no-op on non-Linux targets.
io-uring = ["coordinode-storage/io-uring"]

[dependencies]
coordinode-core = { workspace = true }
coordinode-embed = { workspace = true }
coordinode-replicate = { workspace = true }
coordinode-query = { workspace = true }
coordinode-vector = { workspace = true, optional = true }
coordinode-search = { workspace = true, optional = true }
coordinode-storage = { workspace = true }
coordinode-raft = { workspace = true }
coordinode-wire = { workspace = true }
coordinode-auth = { workspace = true }
# Decompression for the restore CLI only (tool-side, never the DB runtime).
bzip2-rs = { workspace = true }
flate2 = { workspace = true }
structured-proxy = { version = "2", optional = true }
# axum: serve the Router that structured-proxy 2.x exposes (it removed its own serve()).
# Pinned to the same minor structured-proxy depends on so the Router type unifies.
axum = { version = "0.8", optional = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls-webpki-roots"] }
parking_lot = { workspace = true }
tonic-prost = "0.14"
prost = { workspace = true }
tower = "0.5"
http = "1"
pin-project-lite = "0.2"
serde = { workspace = true }
serde_yaml_ng = "0.10"
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
rmpv = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = { workspace = true }

# Safe setrlimit(RLIMIT_NOFILE) wrapper for the configurable fd limit.
[target.'cfg(unix)'.dependencies]
rlimit = "0.11"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = { workspace = true }
coordinode-client = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }

[lints]
workspace = true
