[package]
name = "coordinode-session"
description = "Transport- and dialect-agnostic multiplexed session core: concurrent dispatch, single outbound writer, request-id correlation, cursors and an interactive-transaction sub-thread. Driven by the gRPC and pgwire bindings."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
coordinode-core = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
