[package]
name = "coordinode-swarm"
description = "BitTorrent-inspired swarm segment transfer: segment piece model (manifest, split, verify, assemble) and rarest-first scheduling. Transport for replication repair, operator-commanded shard migration, and node resync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Per-piece transfer compression (hot-data segments). Pure-Rust LZ4.
lz4_flex = "0.13"

[lints]
workspace = true
