[package]
name = "coordinode-swarm"
description = "BitTorrent-inspired swarm segment transfer: segment piece model (manifest, split, verify, assemble) and rarest-first scheduling. Transport for replication repair, operator-commanded shard migration, and node resync."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
thiserror = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Per-piece transfer compression. Pure-Rust LZ4 (hot) + zstd (cold); the project
# never links C zstd.
lz4_flex = "0.13"
structured-zstd = "0.0.41"

[lints]
workspace = true
